--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -218,7 +218,7 @@ Using the updated modelling framework described above, we conducted analyses eva
 
 Here, we provide a (very) brief summary of the way in which we generated the results presented here. Figure \@ref(fig:methods-figure-endemic) shows how the average reduction in annual infection incidence was calculated for the endemic pathogen scenarios. Briefly, we ran the model for a period of time without far UVC (referred to in the figure as the "pre-UVC" period), and calculated the average annual incidence of infection over this period. We then introduced far-UVC at a certain point and ran the model for a further 10 years (referred to in the figure as "post-UVC"). We then calculated the average annual incidence of infection across this decade, and the difference in annual incidence of infection between the "pre-UVC" and "post-UVC" periods.
 
-ref(fig:methods-figure-endemic) shows how the average reduction in annual infection incidence was calculated for the endemic pathogen scenarios. Grey colouring indicates pre-UVC period, and orange colouring indicates period following introduction of far UVC. Far UVC is installed at year 5 in this exemplar scenario (indicated by vertical dashed line). Horizontal dashed lines indicate the average incidence of infection in the pre and post UVC periods. 
+ref(methods-figure-endemic) Calculation of the average reduction in annual infection incidence for the endemic pathogen scenarios. Grey colouring indicates pre-UVC period, and orange colouring indicates period following introduction of far UVC. Far UVC is installed at year 5 in this exemplar scenario (indicated by vertical dashed line). Horizontal dashed lines indicate the average incidence of infection in the pre and post UVC periods. Solid arrow indicates the difference in infection incidence between pre-UVC and post-UVC periods.
 
 ```{r methods-figure-endemic, fig.cap="(ref:methods-figure-endemic)"}
 # Load in the output file:
@@ -233,7 +233,7 @@ for_plot_avg <- for_plot %>%
             start = min((timestep - 10730) * temp_df$parameters$dt) / 365,
             end = max((timestep - 10730) * temp_df$parameters$dt) / 365)
 
-ggplot() +
+daily <- ggplot() +
   geom_line(data = for_plot,
             aes(x = ((timestep - 10730) * temp_df$parameters$dt) / 365,
                 y = 1000 * E_new / 100000,
@@ -246,16 +246,49 @@ ggplot() +
                aes(x = start, xend = end,
                    y = time_period_avg, yend = time_period_avg),
                linetype = "dashed", color = "black") +
+  geom_segment(data = for_plot_avg,
+               aes(x = 5.6, xend = 5.6,
+                   y = 0.635, yend = 0.82),
+               color = "black", arrow = arrow(length = unit(0.02, "npc"), ends = "both")) +
   theme_bw() +
-  labs(x = "Year (far UVC on at Year 5)", y = "Daily Incidence Per 1,000 Population")
+  labs(x = "Year (far UVC on at Year 5)", y = "Daily Incidence\nPer 1,000 Population")
 
+for_plot_annual <- for_plot %>%
+  mutate(year = floor(0.5 * (timestep - 10730) / 365)) %>%
+  group_by(year, time_period) %>%
+  summarise(annual_incidence = sum(E_new)) %>%
+  filter(year < 15)
 
+for_plot_annual_avg <- for_plot_annual %>%
+  group_by(time_period) %>%
+  summarise(time_period_avg = mean(1000 * annual_incidence / 100000))
+
+annual <- ggplot(for_plot_annual,
+            aes(x = year,
+                y = 1000 * annual_incidence / 100000,
+                fill = time_period)) +
+  geom_bar(stat = "identity") +
+  geom_vline(xintercept = 5, linetype = "dashed") +
+  geom_segment(data = for_plot_annual_avg,
+               aes(x = c(0, 5), xend = c(5, 15),
+                   y = time_period_avg, yend = time_period_avg),
+               linetype = "dashed", color = "black") +
+  geom_segment(data = for_plot_avg,
+               aes(x = 5.3, xend = 5.3,
+                   y = 450, yend = 500),
+               color = "black", arrow = arrow(length = unit(0.02, "npc"), ends = "both")) +
+  scale_fill_manual(values = c("lightgrey", "orange"),
+                      labels = c("Pre-UVC", "Post-UVC"),
+                      name = "Time Period") +
+  theme_bw() +
+  labs(x = "Year (far UVC on at Year 5)", y = "Annual Incidence\nPer 1,000 Population")
+
+cowplot::plot_grid(daily, annual, nrow = 2)
 ```
 
+Figure \@ref(fig:methods-figure-epidemic) shows the basis for how we calculated the different metrics used to asses far UVC impact in an epidemic pathogen scenario. We considered 3 metrics - the final epidemic size (i.e. the total number of individuals infected during the epidemic as a fraction of total population size), timing of the epidemic peak, and the size of the peak (i.e. the number of individuals infected when the epidemic is at its largest). For each metric, we ran a scenario with and without far UVC installed separately, and then compared each of the metrics in each case.
 
-Figure \@ref(fig:methods-figure-epidemic) shows the basis for how we calculated the different metrics used to asses far UVC impact in an epidemic pathogen scenario. We considered 3 metrics - the final epidemic size (i.e. the total number of individuals infected during the epidemic as a fraction of total population size), timing of the epidemic peak, and the size of the peak (i.e. the number of individuals infected when the epidemic is at its largest). For each metric, we ran a scenario with and without far UVC installed separately, and then compared each of the metrics in each case. 
-
-ref(fig:methods-figure-epidemic) shows the basis for calculating the various epidemic pathogen disease metrics used in this report. Grey colouring indicates the scenario without far UVC installed, orange indicates the scenario with far UVC. 
+ref(fig:methods-figure-epidemic) shows the basis for calculating the various epidemic pathogen disease metrics used in this report. Grey colouring indicates the scenario without far UVC installed, orange indicates the scenario with far UVC.
 
 ```{r methods-figure-epidemic, fig.cap="(ref:methods-figure-epidemic)"}
 # Load in the output file:
@@ -282,7 +315,6 @@ ggplot(subset(temp_df3, timestep < 350)) +
 
 
 ```
-
 
 ## Results
 
@@ -533,10 +565,10 @@ ggplot(data = df_comparison, aes(x = 100 * hypothetical_reduction,
 
 # Discussion
 
-Our results highlight the impact that deployment of far UVC could have in reducing disease transmission across a range of pathogen archetypes and disese metrics. Targeting the deployment of far UVC towards the riskiest locations provided additional reductions in epidemic size and speed, but appreciable reductions were still observed when far UVC was installed at random and reductions in performance relative to targeted deployment could generally be overcome with increased efficacy and coverage. Far UVC deployment typically had a greater relative impact on the control of an "Influenza-Like" pathogen than the "SARS-CoV-2-Like" pathogen considered in our analyses.
+Our results highlight the impact that deployment of far UVC could have in reducing disease transmission across a range of pathogen archetypes and disease metrics. Targeting the deployment of far UVC towards the riskiest locations provided additional reductions in epidemic size and intensity or endemic burden, but appreciable reductions were still observed when far UVC was installed at random and reductions in performance relative to targeted deployment could generally be overcome with increased efficacy and coverage. Far UVC deployment typically had a greater relative impact on the control of an "Influenza-Like" pathogen than the "SARS-CoV-2-Like" pathogen considered in our analyses.
 
 For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it does not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC can still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve"). Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available.
 
-In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately X% and Y% for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. The increased impact of far UVC on the "Influenza-like" pathogen (something also observed in the epidemic scenarios) is primarily dirven by differences in the starting $R_0$ of each pathogen (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-Like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities. At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilising immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes. By the same logic, when $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
+In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately 9% and 4% in annual incidence of infection for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. This difference between the archetypes is primarily dirven by differences in the $R_0$ of each (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-Like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities (e.g. $R_0=1$ yields a final size of 0%; $R_0=1.25$ a final size of \~35%). At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilizing immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes (e.g $R_0=2$ yields a final size of \~80%; $R_0=2.25$ a final size of \~85%, $R_0=4$ a final size of \~95%). By the same logic, when the starting $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
 
 Our results also highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is low (e.g. 10% considered in the analyses presented in this report). As the proportion of space covered increases, there is increasing convergence between the two strategies (as a greater number of total spaces are covered). At 100% coverage, the two strategies are identical. Our results suggest that in instances where only a low fraction of spaces are likely to be covered (for instance during initial adoption of the technology), the value of information that enables installation to be targeted at the riskiest spaces is likely to be substantial.
